                 classifier is an interface.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by interfaces extended by other
                 interfaces.

* [Injector]     Added onFileDocComment to TaskInstrumentor.java .

Other changes
-------------
* [OCL Editor]   Improved handling of unusable buttons in the OCL Editor.
                 These are now made invisible as opposed to just greying
                 them out. This was asked for by issue #647 as filed
                 against ArgoUML.

* [Type Checker] Improved error reports in Collection.navigateParameterized()

* [Build System] Added this file together with a release policy.
                 Therefore, this section is by no means complete.

* [Type Checker] Introduced Type2


Fixed bugs
----------
* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by java.lang.Object if the original
                 classifier is an interface.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by interfaces extended by other
                 interfaces.

* [Injector]     fixed small problem when only an @postcondition tag was defined
                 for a method.

* [Injector]     fixed NullPointerException in tudresden.ocl.injection.lib.Check

* [Injector]     #223583 OCL constraints at class level
                 Added onFileDocComment to TaskInstrumentor to allow for handling
                 of file level javadoc comments.

* [Injector]     The generated code did not reset Invariant.checking_flag if
                 the code checking contraints raised an exception, and in the
                 same situation Invariant.checkVacantVariants did not reset
                 vacantInvariants.

* [Injector]     #223601 static initializers
  [OCL Library]  replaced Class.forName(name) by